--- a/Machine Learning/Assessments/Missing Values Assesment 05-07-2024/missing_values_assignment.ipynb
+++ b/Machine Learning/Assessments/Missing Values Assesment 05-07-2024/missing_values_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcpT6siXyWcB/+Q8XWSTvt",
+      "authorship_tag": "ABX9TyOm35fnNtS8ysYq9vnZVj5u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Charan0622/Charan_Scifor/blob/main/missing_values_assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Charan0622/Charan_Scifor/blob/main/Machine%20Learning/Assessments/Missing%20Values%20Assesment%2005-07-2024/missing_values_assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "IWdZ9MTXJQBe"
       },
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "fkMJKi36JqX7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
         "id": "kbrGyEZHJ0Md",
         "outputId": "71907a93-75de-4285-a3a9-e820b4aa43a9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
         "id": "wA2qC0jZJ2hL",
         "outputId": "879cacbb-a58a-4d5e-99ca-f63584a6e199"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
       "metadata": {
         "id": "J8Ujj6Z2J54d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +511,7 @@
         "id": "f-vsFbBiKAn8",
         "outputId": "a4e39a14-63b2-4375-eab7-8524e753de1c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +555,7 @@
       "metadata": {
         "id": "WrWxVAUNKDDG"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +578,7 @@
         "id": "bL0Y4V16KFPQ",
         "outputId": "a690345d-cf99-4684-d4b3-b2c6b93d49e8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -689,6 +689,35 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# What's the use of pandas, numpy, seaborn, matplotlib, OS library in python\n",
+        "\n",
+        "1. Pandas:\n",
+        "\n",
+        "Think of Pandas as a powerful tool for organizing and analyzing your data. It helps you work with tables of data, sort, filter, and clean it up.\n",
+        "\n",
+        "2. NumPy:\n",
+        "\n",
+        "NumPy is like a toolkit for working with numbers and performing mathematical calculations. It’s great for handling large sets of numbers and doing complex math.\n",
+        "\n",
+        "3. Seaborn:\n",
+        "\n",
+        "Seaborn is your go-to for making beautiful and informative charts and graphs. It’s designed to help you visualize your data and see trends or patterns.\n",
+        "\n",
+        "4. Matplotlib:\n",
+        "\n",
+        "Matplotlib is a versatile tool for creating all kinds of plots and graphs. It’s useful for drawing charts and customizing how they look.\n",
+        "\n",
+        "5. OS Library:\n",
+        "\n",
+        "The OS library helps you interact with your computer’s file system. It lets you create, delete, and navigate files and folders, and get information about your system."
+      ],
+      "metadata": {
+        "id": "G4oMvXj9SlUp"
+      }
     }
   ]
 }
